--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: _repo
-      - run: mv -f _repo/* .
+      - run: cp -rf _repo/* .
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7
