--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           path: _repo
       - run: cp -rf _repo/* .
-      - uses: peasoft/setup-ruby@master
+      - uses: peasoft/setup-ruby@peasoft-patch-1
         with:
           ruby-version: 3.2
           bundler-cache: true
